change visit result metadata code

--- a/force-app/main/default/classes/TherapeuticAreaPatientService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaPatientService.cls
@@ -1,4 +1,4 @@
-public with sharing class TherapeuticAreaPatientService {
+public without sharing class TherapeuticAreaPatientService {
 
     public Therapeutic_Area_Patient__c getRelatedToStudyTherapeuticAreaPatient(Id participantId, Id tAId) {
         return new Therapeutic_Area_Patient__c(
