--- a/force-app/main/default/classes/Test_ResourceRemote.cls
+++ b/force-app/main/default/classes/Test_ResourceRemote.cls
@@ -26,11 +26,13 @@ public class Test_ResourceRemote {
         System.assertEquals(1, participants.size());
         List<Resource__c> resources = [SELECT Id FROM Resource__c];
         System.assertEquals(1, resources.size());
+        ParticipantService.ParticipantState pState = new ParticipantService.ParticipantState();
+        pState.participant = participants[0];
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
-                .when('getParticipantId')
-                .then(participants[0].Id)
+        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubFactory.newInstance(ParticipantService.class)
+                .when('getState')
+                .then(pState)
                 .getInstance()
         );
 
@@ -51,11 +53,13 @@ public class Test_ResourceRemote {
         List<Resource__c> resources = [SELECT Id FROM Resource__c];
         System.assertEquals(1, resources.size());
         delete [SELECT Id FROM Resource_Action__c];
+        ParticipantService.ParticipantState pState = new ParticipantService.ParticipantState();
+        pState.participant = participants[0];
 
         ClassFactory.clearStubTypesByClassNamesMap();
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
-                .when('getParticipantId')
-                .then(participants[0].Id)
+        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubFactory.newInstance(ParticipantService.class)
+                .when('getState')
+                .then(pState)
                 .getInstance()
         );
 
