--- a/force-app/main/default/classes/Test_BasePPCommunity.cls
+++ b/force-app/main/default/classes/Test_BasePPCommunity.cls
@@ -11,6 +11,7 @@ private class Test_BasePPCommunity {
     
     @TestSetup
     public static void init(){
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateUsersOrSendNotificationsHandler.class);
         TestData.loadTestData();
     }
     
