Updated Contact trigger

--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -8,6 +8,7 @@ public without sharing class CommunityService {
     public static final String SPNL_USER_PROFILE_NAME = 'IQVIA SPNL';
     public static final Id SPNL_USER_PROFILE_ID = [SELECT Id FROM Profile WHERE Name =: SPNL_USER_PROFILE_NAME].Id;
     public static final String COMMUNITY_PROFILE_NAME = 'IQVIA Customer Community Plus Login User';
+    public static final Id SPNL_ROLE = [SELECT Id FROM UserRole WHERE Name='SPNL'].Id;
 
     public static String COMMUNITY_PARTICIPANT_ACCOUNT_NAME = 'Participant';
     public static String COMMUNITY_DELEGATE_ACCOUNT_NAME = 'Delegate';
