--- a/force-app/main/default/classes/IntegrationVisitTriggerHandler.cls
+++ b/force-app/main/default/classes/IntegrationVisitTriggerHandler.cls
@@ -74,6 +74,8 @@ public with sharing class IntegrationVisitTriggerHandler{
         update patientVisits;
         insert newVisits;
         update visits;
+        patientVisits.addAll(newVisits);
+        updateMissedVisits(patientVisits);
     }
 
     private static Boolean matchFoundByName(Integration_Visit__c externalVisit, Patient_Visit__c visit){
@@ -118,6 +120,47 @@ public with sharing class IntegrationVisitTriggerHandler{
                 visit.Processed__c = false;
             }
         }
+    }
+
+    private static void updateMissedVisits(List<Patient_Visit__c> patientVisits){
+        Set<String> visitExternalKeys = new Set<String>();
+        Set<Id> visitIds = new Set<Id>();
+        for(Patient_Visit__c visit : patientVisits){
+            visitIds.add(visit.Id);
+        }
+        List<Patient_Visit__c> visits = [
+                SELECT  Participant_Study_Enrollment__r.External_Key__c
+                FROM    Patient_Visit__c
+                WHERE   Id IN : visitIds
+        ];
+        for(Patient_Visit__c visit : visits){
+            visitExternalKeys.add(visit.Participant_Study_Enrollment__r.External_Key__c);
+        }
+        patientVisits = [
+                SELECT
+                        Id,
+                        Participant_Study_Enrollment__r.External_Key__c,
+                        Status__c,
+                        Visit_Number__c
+                FROM    Patient_Visit__c
+                WHERE   Participant_Study_Enrollment__r.External_Key__c IN : visitExternalKeys
+                AND     Status__c != 'Missed'
+                ORDER BY Visit_Number__c
+                        DESC
+        ];
+        Boolean recordsChanged = false;
+        Map<String, Patient_Visit__c> visitMap = new Map<String, Patient_Visit__c>();
+        for(Patient_Visit__c visit : patientVisits){
+            if(visit.Status__c == 'Completed'){
+                visitMap.put(visit.Participant_Study_Enrollment__r.External_Key__c, visit);
+            }
+            if(visitMap.containsKey(visit.Participant_Study_Enrollment__r.External_Key__c) && visitMap.get(visit.Participant_Study_Enrollment__r.External_Key__c).Visit_Number__c > visit.Visit_Number__c
+                    && visit.Status__c != 'Completed' && visit.Status__c != 'Missed'){
+                visit.Status__c = 'Missed';
+                recordsChanged = true;
+            }
+        }
+        if(recordsChanged) update patientVisits;
     }
 
 }
