PEH-440 PEH-739 PEH-740 add description on the Visit Results

--- a/force-app/main/default/classes/VisitResultMService.cls
+++ b/force-app/main/default/classes/VisitResultMService.cls
@@ -25,6 +25,7 @@ public inherited sharing class VisitResultMService {
                 'SELECT Id, ' +
                         'Label, ' +
                         'DeveloperName, ' +
+                        'Description_Label_Api_Name__c, ' +
                         'Display_Order__c ' +
                 ' FROM Visit_Result_TypeM__mdt ' +
                 (visitResultGroupName != null ? ' WHERE Visit_Result_Group__r.Label = \'' + visitResultGroupName + '\'' : '') +
